# lextyp-tauri

./: .gitignore  README.md  THIRD_PARTY_LICENSES.md  cliff.toml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  check.yml  memory.yml  release.yml  smoke-test.yml  test.yml
docs/: guide.html  guide.zh-CN.html  index.html  index.zh-CN.html
examples/: README.md  build_demo.py  citation-demo.lextyp
examples/citation-demo/: README.md  references.bib
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  project.rs  typst.rs  update.rs
src/components/: CitationEditor.tsx  CitationEntryCard.tsx  CitationPicker.tsx  CitationTag.tsx  ContextMenu.tsx  CoverPageCard.tsx  CoverPageDialog.tsx  CoverPagePreview.tsx  DocumentPicker.tsx  Editor.tsx  EditorFormattingToolbar.tsx  EditorSideMenu.tsx  EditorTopToolbar.tsx  EmptyState.tsx  FileTree.tsx  FileTreeItem.tsx  FilesPanel.tsx  FloatingOutline.tsx  HistoryPanel.tsx  NavigationBar.tsx  PdfPreview.tsx  ReferencePanel.tsx  ReferencesPanel.tsx  ReviewPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  SlashMenu.tsx  StatusBar.tsx  VersionDiffView.tsx
src/editor/: schema.tsx  slash-items.ts
src/lib/: bib-parser.ts  block-diff.ts  citation-search.ts  date-format.ts  i18n.ts  typst-serializer.ts  word-count.ts
src/stores/: app-store.ts  reference-store.ts  review-store.ts  (+3 more)
test/: bib-parser.test.ts  citation-test.ts  example-project.test.ts  fixtures.ts  sample.bib  test.lextyp  test1.lextyp  typst-serializer.include.test.ts
(+25 files in other folders)
