[package]
name = "lextyp"
version = "0.1.0"
description = "A WYSIWYG Typst document editor with academic citation support"
authors = ["you"]
edition = "2021"

[lib]
name = "lextyp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
tempfile = "3"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt"] }

# Typst library compilation (replaces CLI subprocess)
typst = "0.14"
typst-pdf = "0.14"
typst-kit = { version = "0.14", default-features = false, features = ["embed-fonts"] }
chrono = "0.4"
